--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -53,7 +53,11 @@
         "title": "Suggestions"
     },
     "suggestions_embed": {
-        "suggestion_deleted": "The suggestion has been deleted"
+        "suggestion_deleted": "The suggestion has been deleted",
+        "suggestion_up_voted": "You upvoted the suggestion",
+        "suggestion_down_voted": "You downvoted the suggestion",
+        "up_votes": "Upvotes",
+        "down_votes": "Downvotes"
     },
     "give_money_cmd": {
         "response_msg": "User {user} received {amount} Pokémon Dollars"
