Add possibility to add favorite cards to other pages as well

--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -201,6 +201,7 @@
         "name": "ajouter_carte_favorite",
         "desc": "Ajouter une de vos cartes évaluées à un emplacement dans votre liste de cartes préférées",
         "invalid_slot_id": "Cet emplacement est invalide",
+        "invalid_page_id": "Cette page n'existe pas",
         "missing_card": "Vous ne pouvez pas ajouter une carte que vous ne possédez pas à votre liste de cartes préférées",
         "response_msg": "Carte ajoutée"
     },
