--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -201,6 +201,7 @@
         "name": "set_favorite_card",
         "desc": "Set a graded card in a slot of your favorite cards list",
         "invalid_slot_id": "There is no such slot id available",
+        "invalid_page_id": "There is no such page available",
         "missing_card": "You can't set a card that you don't own to your favorite cards list",
         "response_msg": "Card set"
     },
