--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -203,6 +203,7 @@
         "invalid_slot_id": "Cet emplacement est invalide",
         "invalid_page_id": "Cette page n'existe pas",
         "missing_card": "Vous ne pouvez pas ajouter une carte que vous ne possédez pas à votre liste de cartes préférées",
+                "ungraded_card": "Vous ne pouvez pas ajouter une carte non-évaluée à votre liste de cartes préférées",
         "response_msg": "Carte ajoutée"
     },
     "favorite_cards_cmd": {
