Add max size of a card id into data analysis file

--- a/data-card-analysis/TestDataCardCollection.ipynb
+++ b/data-card-analysis/TestDataCardCollection.ipynb
@@ -1977,8 +1977,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "da7d879f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame_cards[\"id\"].str.len().max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "532add63",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b7ec207",
    "metadata": {},
    "outputs": [],
    "source": []
