Add admin command to give grading actions to a player

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -73,6 +73,9 @@
     "give_boosters_cmd": {
         "response_msg": "User {user} received {quantity} {kind} booster(s)"
     },
+    "give_gradings_cmd": {
+        "response_msg": "User {user} received {quantity} grading action(s)"
+    },
     "give_all_boosters_cmd": {
         "response_msg": "All users received {quantity} {kind} booster(s)"
     },
