Add limit for number of cards involved in one trade

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -182,7 +182,9 @@
         "confirmation_label": "Confirm",
         "trade_confirmed_response_msg": "Trade has been confirmed and processed",
         "same_user": "You can't trade with... yourself",
+        "author_too_many_cards": "You can't send more than {limit} cards at a time",
         "author_missing_cards": "Your don't own all the cards listed",
+        "other_player_too_many_cards": "{user} can't send more than {limit} cards at a time",
         "other_player_missing_cards": "{user} doesn't own all the cards listed",
         "wrong_confirmation_user": "Only {user} can confirm the trade"
     },
