--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -182,7 +182,9 @@
         "confirmation_label": "Valider",
         "trade_confirmed_response_msg": "L'échange a été validé et réalisé",
         "same_user": "Vous ne pouvez pas échanger avec... vous-même",
+        "author_too_many_cards": "Vous ne pouvez pas envoyer plus de {limit} cartes à la fois",
         "author_missing_cards": "Vous ne possédez pas toutes les cartes mentionnées",
+        "other_player_too_many_cards": "{user} ne peut pas envoyer plus de {limit} cartes à la fois",
         "other_player_missing_cards": "{user} ne possède pas toutes les cartes mentionnées",
         "wrong_confirmation_user": "Uniquement {user} peut valider l'échange"
     },
