--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -316,6 +316,8 @@
     "search_cards_embed": {
         "filter_by_name_label": "Filtrer par nom",
         "card_name_input": "Nom de carte",
+        "filter_by_set_name_label": "Filtrer par extension",
+        "set_name_input": "Nom de set",
         "filter_by_grade_label": "Filter par note",
         "filter_by_rarity_label": "Filtrer par rareté"
     },
