Improve notebook to include vision of sets content

--- a/data-card-analysis/TestDataCardCollection.ipynb
+++ b/data-card-analysis/TestDataCardCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "909a9ec2",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b771f727",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "8670313a",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "4836cfce",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "Name: rarity, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "54dcae18",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "Name: types, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,8 +2037,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "01ce0af8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sets = pandas.DataFrame.from_records(data_frame_cards[\"set\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "35cb44ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>images</th>\n",
+       "      <th>legalities</th>\n",
+       "      <th>name</th>\n",
+       "      <th>printedTotal</th>\n",
+       "      <th>ptcgoCode</th>\n",
+       "      <th>releaseDate</th>\n",
+       "      <th>series</th>\n",
+       "      <th>total</th>\n",
+       "      <th>updatedAt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>base1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/base1...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': None, 'stan...</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>BS</td>\n",
+       "      <td>1999/01/09</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2022/10/10 15:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>base1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/base1...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': None, 'stan...</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>BS</td>\n",
+       "      <td>1999/01/09</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2022/10/10 15:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>base1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/base1...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': None, 'stan...</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>BS</td>\n",
+       "      <td>1999/01/09</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2022/10/10 15:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>base1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/base1...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': None, 'stan...</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>BS</td>\n",
+       "      <td>1999/01/09</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2022/10/10 15:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>base1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/base1...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': None, 'stan...</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>BS</td>\n",
+       "      <td>1999/01/09</td>\n",
+       "      <td>Base</td>\n",
+       "      <td>102</td>\n",
+       "      <td>2022/10/10 15:12:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16104</th>\n",
+       "      <td>sv1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/sv1/s...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': 'Legal', 's...</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>198</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023/03/31</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2023/03/31 15:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16105</th>\n",
+       "      <td>sv1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/sv1/s...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': 'Legal', 's...</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>198</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023/03/31</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2023/03/31 15:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16106</th>\n",
+       "      <td>sv1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/sv1/s...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': 'Legal', 's...</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>198</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023/03/31</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2023/03/31 15:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16107</th>\n",
+       "      <td>sv1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/sv1/s...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': 'Legal', 's...</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>198</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023/03/31</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2023/03/31 15:45:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16108</th>\n",
+       "      <td>sv1</td>\n",
+       "      <td>{'symbol': 'https://images.pokemontcg.io/sv1/s...</td>\n",
+       "      <td>{'unlimited': 'Legal', 'expanded': 'Legal', 's...</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>198</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2023/03/31</td>\n",
+       "      <td>Scarlet &amp; Violet</td>\n",
+       "      <td>258</td>\n",
+       "      <td>2023/03/31 15:45:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16109 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id                                             images  \\\n",
+       "0      base1  {'symbol': 'https://images.pokemontcg.io/base1...   \n",
+       "1      base1  {'symbol': 'https://images.pokemontcg.io/base1...   \n",
+       "2      base1  {'symbol': 'https://images.pokemontcg.io/base1...   \n",
+       "3      base1  {'symbol': 'https://images.pokemontcg.io/base1...   \n",
+       "4      base1  {'symbol': 'https://images.pokemontcg.io/base1...   \n",
+       "...      ...                                                ...   \n",
+       "16104    sv1  {'symbol': 'https://images.pokemontcg.io/sv1/s...   \n",
+       "16105    sv1  {'symbol': 'https://images.pokemontcg.io/sv1/s...   \n",
+       "16106    sv1  {'symbol': 'https://images.pokemontcg.io/sv1/s...   \n",
+       "16107    sv1  {'symbol': 'https://images.pokemontcg.io/sv1/s...   \n",
+       "16108    sv1  {'symbol': 'https://images.pokemontcg.io/sv1/s...   \n",
+       "\n",
+       "                                              legalities              name  \\\n",
+       "0      {'unlimited': 'Legal', 'expanded': None, 'stan...              Base   \n",
+       "1      {'unlimited': 'Legal', 'expanded': None, 'stan...              Base   \n",
+       "2      {'unlimited': 'Legal', 'expanded': None, 'stan...              Base   \n",
+       "3      {'unlimited': 'Legal', 'expanded': None, 'stan...              Base   \n",
+       "4      {'unlimited': 'Legal', 'expanded': None, 'stan...              Base   \n",
+       "...                                                  ...               ...   \n",
+       "16104  {'unlimited': 'Legal', 'expanded': 'Legal', 's...  Scarlet & Violet   \n",
+       "16105  {'unlimited': 'Legal', 'expanded': 'Legal', 's...  Scarlet & Violet   \n",
+       "16106  {'unlimited': 'Legal', 'expanded': 'Legal', 's...  Scarlet & Violet   \n",
+       "16107  {'unlimited': 'Legal', 'expanded': 'Legal', 's...  Scarlet & Violet   \n",
+       "16108  {'unlimited': 'Legal', 'expanded': 'Legal', 's...  Scarlet & Violet   \n",
+       "\n",
+       "       printedTotal ptcgoCode releaseDate            series  total  \\\n",
+       "0               102        BS  1999/01/09              Base    102   \n",
+       "1               102        BS  1999/01/09              Base    102   \n",
+       "2               102        BS  1999/01/09              Base    102   \n",
+       "3               102        BS  1999/01/09              Base    102   \n",
+       "4               102        BS  1999/01/09              Base    102   \n",
+       "...             ...       ...         ...               ...    ...   \n",
+       "16104           198      None  2023/03/31  Scarlet & Violet    258   \n",
+       "16105           198      None  2023/03/31  Scarlet & Violet    258   \n",
+       "16106           198      None  2023/03/31  Scarlet & Violet    258   \n",
+       "16107           198      None  2023/03/31  Scarlet & Violet    258   \n",
+       "16108           198      None  2023/03/31  Scarlet & Violet    258   \n",
+       "\n",
+       "                 updatedAt  \n",
+       "0      2022/10/10 15:12:00  \n",
+       "1      2022/10/10 15:12:00  \n",
+       "2      2022/10/10 15:12:00  \n",
+       "3      2022/10/10 15:12:00  \n",
+       "4      2022/10/10 15:12:00  \n",
+       "...                    ...  \n",
+       "16104  2023/03/31 15:45:00  \n",
+       "16105  2023/03/31 15:45:00  \n",
+       "16106  2023/03/31 15:45:00  \n",
+       "16107  2023/03/31 15:45:00  \n",
+       "16108  2023/03/31 15:45:00  \n",
+       "\n",
+       "[16109 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "05badc66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "swshp    285\n",
+       "swsh8    284\n",
+       "sm12     272\n",
+       "sm11     261\n",
+       "sv1      258\n",
+       "        ... \n",
+       "mcd18     12\n",
+       "tk1b      10\n",
+       "tk1a      10\n",
+       "bp         9\n",
+       "fut20      5\n",
+       "Name: id, Length: 151, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sets[\"id\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f398d6d6",
    "metadata": {},
    "outputs": [],
    "source": []
